--- a/learn-m365-pr/wwl/configure-azure-ad-application-proxy/7-summary.yml
+++ b/learn-m365-pr/wwl/configure-azure-ad-application-proxy/7-summary.yml
@@ -4,12 +4,13 @@ title: Summary
 metadata:
   title: Summary
   description: "Summary"
-  ms.date: 07/12/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 1
 content: |
   [!include[](includes/7-summary.md)]
