changed files by pdets auto publish service, publishid[a93684ad-2a64-4688-8d9a-87a17118e407] and do [publish].

--- a/learn-m365-pr/wwl/configure-azure-ad-application-proxy/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/configure-azure-ad-application-proxy/6-knowledge-check.yml
@@ -44,7 +44,7 @@ quiz:
     - content: "Alan should deploy at least two connectors"
       isCorrect: false
       explanation: "Incorrect. Deploying at least two connectors helps support high availability."
-    - content: "Alan should verify the Microsoft AAD Application Proxy Connector service is running"
+    - content: "Alan should verify the Microsoft Azure AD Application Proxy Connector service is running"
       isCorrect: false
       explanation: "Incorrect. This service enables connectivity but does not impact load-balancing."
     - content: "There's nothing else that Alan must do"
