--- a/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/4-enable-multifactor-authentication.yml
+++ b/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/4-enable-multifactor-authentication.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.manage-secure-user-access-microsoft-365.enable-multifactor-authentication
-title: Enable multi-factor authentication
+title: Enable multifactor authentication
 metadata:
-  title: Enable multi-factor authentication
-  description: "Enable multi-factor authentication"
+  title: Enable multifactor authentication
+  description: "Enable multifactor authentication"
   ms.date: 04/27/2022
   author: wwlpublish
   ms.author: tfrink
