changed files by pdets auto publish service, publishid[80185300-892c-4f6d-825b-3f94cbe1eac7] and do [publish].

--- a/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/4-examine-how-safe-attachments-protects-against-malicious-attachments.yml
+++ b/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/4-examine-how-safe-attachments-protects-against-malicious-attachments.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.explore-threat-protection-microsoft-365-defender.examine-how-safe-attachments-protects-against-malicious-attachments
-title: Examine how Safe Attachments protects against malicious attachments
+title: Examine how Safe Attachments protect against malicious attachments
 metadata:
-  title: Examine how Safe Attachments protects against malicious attachments
-  description: "Examine how Safe Attachments protects against malicious attachments"
+  title: Examine how Safe Attachments protect against malicious attachments
+  description: "Examine how Safe Attachments protect against malicious attachments"
   ms.date: 04/27/2022
   author: wwlpublish
   ms.author: tfrink
