--- a/learn-m365-pr/wwl/what-is-m365/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/what-is-m365/7-knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.knowledge-check
+uid: learn-m365.what-is-m365.5-summary-and-knowledge-check
 title: Knowledge check
 metadata:
   title: Knowledge check
