--- a/learn-m365-pr/wwl/what-is-m365/4-describe-differences-office-365-microsoft-365-windows-365.yml
+++ b/learn-m365-pr/wwl/what-is-m365/4-describe-differences-office-365-microsoft-365-windows-365.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.describe-differences-office 365-microsoft-365-windows-365
+uid: learn-m365.what-is-m365.describe-differences-office-365-microsoft-365-windows-365
 title: Describe the differences between Office 365, Microsoft 365, and Windows 365
 metadata:
   title: Describe the differences between Office 365, Microsoft 365, and Windows 365
