changed files by pdets auto publish service, publishid[d038be56-066c-4d86-8062-2e8cc682a13c] and do [publish].

--- a/learn-m365-pr/wwl/what-is-m365/8-summary-resources.yml
+++ b/learn-m365-pr/wwl/what-is-m365/8-summary-resources.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.summary-resources
+uid: learn-m365.what-is-m365.summary-resource
 title: Summary and resources
 metadata:
   title: Summary and resources
