--- a/learn-m365-pr/wwl/what-is-m365/index.yml
+++ b/learn-m365-pr/wwl/what-is-m365/index.yml
@@ -33,6 +33,6 @@ units:
 - learn-m365.what-is-m365.explore-microsoft-365-subscription-options
 - learn-m365.what-is-m365.explore-microsoft-365-tenant
 - learn-m365.what-is-m365.5-summary-and-knowledge-check
-- learn-m365.what-is-m365.summary-resources
+- learn-m365.what-is-m365.summary-resource
 badge:
   uid: learn-m365.what-is-m365.badge
