changed files by pdets auto publish service, publishid[1002a4fc-7046-4e5b-a5e7-5719f84ede2e] and do [publish].

--- a/learn-m365-pr/wwl/what-is-m365/5-explore-microsoft-365-subscription-options.yml
+++ b/learn-m365-pr/wwl/what-is-m365/5-explore-microsoft-365-subscription-options.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.explore-microsoft-365-subscription-options
+uid: learn-m365.what-is-m365.4-m365-subscriptions
 title: Explore the Microsoft 365 subscription options
 metadata:
   title: Explore the Microsoft 365 subscription options
