--- a/learn-m365-pr/wwl/what-is-m365/6-explore-microsoft-365-tenant.yml
+++ b/learn-m365-pr/wwl/what-is-m365/6-explore-microsoft-365-tenant.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.explore-microsoft-365-tenant
+uid: learn-m365.what-is-m365.explore-m365-tenant
 title: Explore Microsoft 365 tenant
 metadata:
   title: Explore Microsoft 365 tenant
