--- a/learn-m365-pr/wwl/what-is-m365/index.yml
+++ b/learn-m365-pr/wwl/what-is-m365/index.yml
@@ -30,8 +30,8 @@ units:
 - learn-m365.what-is-m365.explain-how-microsoft-365-drives-productivity-cloud
 - learn-m365.what-is-m365.describe-how-microsoft-365-enables-hybrid-flexible-work-strategies
 - learn-m365.what-is-m365.describe-differences-office-365-microsoft-365-windows-365
-- learn-m365.what-is-m365.explore-microsoft-365-subscription-options
-- learn-m365.what-is-m365.explore-microsoft-365-tenant
+- learn-m365.what-is-m365.4-m365-subscriptions
+- learn-m365.what-is-m365.explore-m365-tenant
 - learn-m365.what-is-m365.5-summary-and-knowledge-check
 - learn-m365.what-is-m365.summary-resource
 badge:
