--- a/learn-m365-pr/paths/manage-your-microsoft-365-tenant/index.yml
+++ b/learn-m365-pr/paths/manage-your-microsoft-365-tenant/index.yml
@@ -13,7 +13,8 @@ prerequisites: |
   - Students should have completed a role-based administrator training collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
   - Students must have a proficient understanding of general IT practices.
-summary: ""
+summary: |
+  This learning path provides instruction on how to manage your Microsoft 365 tenant, including administrative roles, tenant health and services, Microsoft 365 Apps for enterprise, and workplace analytics using Microsoft Viva Insights.
 iconUrl: /learn/achievements/manage-your-microsoft-365-tenant.svg
 levels:
 - intermediate
