--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -23,9 +23,11 @@ prerequisites: |
   - Access to an instance of Viva Goals
 iconUrl: /learn/achievements/generic-badge.svg
 levels:
-  - beginner
+- beginner
 roles:
-  - admin
+- administrator
+- solutions architect
+- student
 products:
 - m365
 - viva
