changed files by pdets auto publish service, publishid[0fa3a220-f7e7-40fd-a9d5-f8909378036d] and do [publish].

--- a/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/index.yml
+++ b/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/index.yml
@@ -19,7 +19,8 @@ abstract: |
   *   Describe how Microsoft Defender anti-phishing policies work.
   *   Understand the process to manage the Tenant Allow/Block list in Microsoft 365 Defender.
   *   Understand how Advanced Hunting can be used to track events in your secure messaging environment.
-prerequisites: ""
+prerequisites: |
+  None
 iconUrl: /learn/achievements/m365-defender-threat-protection.svg
 levels:
 - intermediate
