changed files by pdets auto publish service, publishid[feb75e5a-0666-4432-ae57-a5a539510296] and do [publish].

--- a/learn-m365-pr/wwl/examine-zero-trust-approach-to-security-microsoft-365/4-examine-microsofts-strategy-for-networking.yml
+++ b/learn-m365-pr/wwl/examine-zero-trust-approach-to-security-microsoft-365/4-examine-microsofts-strategy-for-networking.yml
@@ -4,12 +4,13 @@ title: Examine Microsoft's strategy for Zero Trust networking
 metadata:
   title: Examine Microsoft's strategy for Zero Trust networking
   description: "Examine Microsoft's strategy for Zero Trust networking"
-  ms.date: 07/05/2021
+  ms.date: 04/28/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 5
 content: |
   [!include[](includes/4-examine-microsofts-strategy-for-networking.md)]
@@ -20,10 +21,10 @@ quiz:
     choices:
     - content: "External sharing policies"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't one of ways in which organizations can control access to resources. Try again."
+      explanation: "Incorrect. This item isn't one of ways in which organizations can control access to resources."
     - content: "Terms of use"
       isCorrect: true
-      explanation: "That's correct. Access can be controlled with extra authentication challenges (for example, multi-factor authentication), Terms of Use, or access restrictions."
+      explanation: "Correct. Access can be controlled with extra authentication challenges (for example, multi-factor authentication), Terms of Use, or access restrictions."
     - content: "Data loss prevention policies"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't one of ways in which organizations can control access to resources. Try again."
+      explanation: "Incorrect. This item isn't one of ways in which organizations can control access to resources."
