--- a/learn-m365-pr/wwl/examine-zero-trust-approach-to-security-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/examine-zero-trust-approach-to-security-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.examine-zero-trust-approach-to-security-microsoft-365
 metadata:
   title: Explore the Zero Trust security model
   description: "Explore the Zero Trust security model"
-  ms.date: 07/05/2021
+  ms.date: 04/28/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -11,7 +11,7 @@ metadata:
 title: Explore the Zero Trust security model
 summary: This module examines the concepts and principles of the Zero Trust security model, as well as how Microsoft 365 supports it, and how your organization can implement it.
 abstract: |
-  By the end of this module, you will be able to:
+  By the end of this module, you'll be able to:
   - Describe the Zero Trust approach to security in Microsoft 365
   - Describe the principles and components of the Zero Trust security model
   - Describe the five steps to implementing a Zero Trust security model in your organization
@@ -27,7 +27,6 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 units:
